# TeleCrap

./: .gitignore  CMakeLists.txt  README.md  TeleCrap.sln  patch.txt  telecrap_database.mwb  telecrap_database.sql
.github/workflows/: release-on-tag.yml
TeleCrap.Client/: CMakeLists.txt  Makefile  TeleCrap.Client.vcxproj  TeleCrap.Client.vcxproj.filters  settings.cfg
TeleCrap.Client/include/: MemoryCache.h  TerminalUI.h
TeleCrap.Client/src/: MemoryCache.cpp  TeleCrap.Client.cpp  TerminalUI.Curses.cpp  TerminalUI.Linux.cpp  TerminalUI.Win.cpp  TerminalUI.cpp
TeleCrap.Libs.Sol/: CMakeLists.txt
TeleCrap.Server/: CMakeLists.txt  Makefile  TeleCrap.Server.vcxproj  TeleCrap.Server.vcxproj.filters  settings.cfg  telecrap.db
TeleCrap.Server/addons/: 8ball.lua  ADDON_API.md  ADDON_API_RU.md  chatstats.lua  choose.lua  coin.lua  dice.lua  facts.lua  me.lua  meow.lua  ping.lua  roll.lua  rps.lua  uptime.lua
TeleCrap.Server/include/: AddonManager.h  Backend.h  ChatHistory.h  Database.h  ServerCLI.h
TeleCrap.Server/src/: AddonManager.cpp  Backend.cpp  Database.cpp  ServerCLI.Linux.cpp  ServerCLI.Win.cpp  ServerCLI.cpp  TeleCrap.Server.cpp
TeleCrap.Shared/: CMakeLists.txt  Console.cpp  Log.cpp  Protocol.cpp  Request.cpp  Responce.cpp  SecureChannel.cpp  SocketHelper.cpp  TeleCrap.Shared.vcxproj  TeleCrap.Shared.vcxproj.filters  Transport.cpp  pch.h
TeleCrap.Shared/cmake/: StageBundledOpenSSLCrypto.cmake
TeleCrap.Shared/include/: Telecrap.ixx
TeleCrap.Shared/include/telecrap/: Console.h  Log.h  Log.ixx  Models.h  Models.ixx  Protocol.h  Protocol.ixx  Request.h  Request.ixx  Responce.h  Responce.ixx  SecureChannel.h  SecureChannel.ixx  SocketHelper.h  SocketHelper.ixx  Transport.h  Transport.ixx  Update.h  Update.ixx  mINI.ixx
Telecrap.Libs.SQLite/: Telecrap.Libs.SQLite.vcxproj  Telecrap.Libs.SQLite.vcxproj.filters
Telecrap.Libs.Sol/: Telecrap.Libs.Sol.vcxproj  Telecrap.Libs.Sol.vcxproj.filters
Telecrap.Libs.Sol/include/lua/: desktop.ini  lapi.h  lauxlib.h  ldo.h  lfunc.h  llimits.h  lmem.h  lobject.h  lstate.h  lstring.h  ltable.h  ltm.h  lua.h  lualib.h  lzio.h
Telecrap.Libs.Sol/src/: lapi.c  lauxlib.c  lctype.c  ldebug.c  ldump.c  linit.c  llex.c  lmathlib.c  lobject.c  loslib.c  lparser.c  ltable.c  ltablib.c  ltm.c  lutf8lib.c
packaging/systemd/: telecrap-server.service
